# Computer-Graphics-group-17

./: .gitignore  CMakeLists.txt  Final.sln
docs/: Presentation.ppt  Report.docx  Report_plaatjes.docx  agenda meeting 1.txt  agenda-notulen meeting 2.txt  concept mail Eisemann.txt  ~$port_plaatjes.docx
models/: CarScene.blend  CarScene.mtl  bluecube.mtl  gaarding.mtl  greencube.mtl  madScience.mtl  redcube.mtl  rgbcubes.mtl  scene.mtl  scene.mtl~  sphere.mtl
src/: BoundingBox.cpp  BoundingBox.h  BoundingStructure.cpp  BoundingStructure.h  BoundingTree.cpp  BoundingTree.h  BoxesTree.cpp  BoxesTree.h  Final.aps  Final.vcxproj  Final.vcxproj.filters  hsv.h  imageWriter.h  main.cpp  mesh.cpp  raytracing.cpp  raytracing.h  refraction.cpp  refraction.h  resource.h
src/Debug/: Raytracing.ilk  TP2.ilk  vc120.idb
src/Debug/Raytracing.tlog/: CL.read.1.tlog  CL.write.1.tlog  Raytracing.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/Debug/TP2.tlog/: CL.read.1.tlog  CL.write.1.tlog  TP2.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/Raytracing.xcodeproj/project.xcworkspace/xcuserdata/Mark.xcuserdatad/: UserInterfaceState.xcuserstate
src/Release/: Raytracing.iobj  Raytracing.ipdb
src/Release/Raytracing.tlog/: CL.read.1.tlog  CL.write.1.tlog  Raytracing.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/Release/TP2.tlog/: CL.read.1.tlog  CL.write.1.tlog  TP2.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
(+2 files in other folders)
